tests/sksl/errors/SpuriousFloat.glsl
### Compilation failed:

error: 3: expected ';', but found '2.5'
    x = 1.5 2.5;
            ^^^
1 error
